--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -1,39 +1,66 @@
 {% extends "base.html" %} {% block content %}
 
 <section class="container">
-	<div class="row center-align">
-		<div class="col s12 m6 find_recipe_col">
-			<h1>Search Results</h1>
-		</div>
-	</div>
+  <div class="row center-align">
+    <div class="col s12 m6 find_recipe_col">
+      <h1>Search Results</h1>
+    </div>
+  </div>
 </section>
 
 <!-- Collapsible -->
 <section class="container">
-	<ul class="collapsible recipe-list">
-		{% for doc in search_results %}
-		<li>
-			<div class="row recipes collapsible-header white-text red lighten-3">
-				<div class="recipes-img col s12 m3">
-					<img
+  <ul class="collapsible recipe-list">
+    {% for rec in recipes %}
+    <li>
+      <div class="row recipes collapsible-header white-text red lighten-3">
+        <div class="recipes-img col s12 m3">
+          <img
             class="responsive-img"
-            src="{{ doc.image_url }}"
-            alt="image of {{ doc.recipe_name }}"
+            src="{{ rec.image_url }}"
+            alt="image of {{ rec.recipe_name }}"
           />
         </div>
-					<div class="col s12 m7">
-						<h5><i class="fas fa-utensils"></i>{{ doc.recipe_name }}</h5>
-						{{ doc.category }}
-						<p><em>by: {{ doc.created_by }}</em></p>
-						<p><em>by: {{ doc.date_added }}</em></p>
-					</div>
-                    <div class="col s12 m2 recipe-buttons not-collapse left-align">
+        <div class="col s12 m7">
+          <h5><i class="fas fa-utensils"></i>{{ rec.recipe_name }}</h5>
+          {{ rec.category }}
+          <p><em>by: {{ rec.created_by }}</em></p>
+          <p><em>by: {{ rec.date_added }}</em></p>
+        </div>
+        <div class="col s12 m2 recipe-buttons not-collapse left-align">
           <a
-            href="{{ url_for('view_search_result', recipe_id=doc._id) }}"
+            href="{{ url_for('view_search_result', recipe_id=rec._id) }}"
             class="waves-effect waves-light btn search-result-view-btn view-btn red lighten-5"
             >View Recipe</a
           >
         </div>
-				</div>
-				{% endfor %}
-				{% endblock %}
+      </div>
+      {% endfor %}
+    {% for rec in ingredients %}
+    <li>
+      <div class="row recipes collapsible-header white-text red lighten-3">
+        <div class="recipes-img col s12 m3">
+          <img
+            class="responsive-img"
+            src="{{ rec.image_url }}"
+            alt="image of {{ rec.recipe_name }}"
+          />
+        </div>
+        <div class="col s12 m7">
+          <h5><i class="fas fa-utensils"></i>{{ rec.recipe_name }}</h5>
+          {{ rec.category }}
+          <p><em>by: {{ rec.created_by }}</em></p>
+          <p><em>by: {{ rec.date_added }}</em></p>
+        </div>
+        <div class="col s12 m2 recipe-buttons not-collapse left-align">
+          <a
+            href="{{ url_for('view_search_result', recipe_id=rec._id) }}"
+            class="waves-effect waves-light btn search-result-view-btn view-btn red lighten-5"
+            >View Recipe</a
+          >
+        </div>
+      </div>
+      {% endfor %} {% endblock %}
+    </li>
+  </ul>
+</section>
