--- a/static/css/style.css
+++ b/static/css/style.css
@@ -219,6 +219,11 @@ footer {
   color: white;
 }
 
+/* Search Results Page */
+.no_results > h2 {
+    color: red;
+}
+
 /* Add a Recipe */
 .dropdown-content li>span {
     color: black;
