--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -4,8 +4,7 @@
   <div class="row center-align">
     <div class="col s12 m6 find_recipe_col">
       <h1>Search Results</h1>
-      <p>Want to search again?</p>
-      <a href="{{ url_for('find_recipe') }}" class="waves-effect waves-light btn search-result-view-btn view-btn red lighten-3">Find A Recipe</a>
+      <a href="{{ url_for('find_recipe') }}" class="waves-effect waves-light btn search-result-view-btn view-btn red lighten-3">Start New Search</a>
     </div>
   </div>
 </section>
@@ -75,7 +74,7 @@
 {% if ingredientsNum == 0 %}
   <section class="container">
   <div class="row center-align">
-    <div class="col s12 m6 find_recipe_col">
+    <div class="col s12 m6 find_recipe_col no_results">
       <h2>Sorry, no recipes found!</h2>
       <p>Want to search again?</p>
       <a href="{{ url_for('find_recipe') }}" class="waves-effect waves-light btn search-result-view-btn view-btn red lighten-3">Find A Recipe</a>
